# rapidtide

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  .gitignore.swp  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changesin3.0  Dockerfile  INSTALL.md  INSTALL.rst  LONGDESC.rst  MANIFEST.in  OrthoImageItem.py  README.md  README.rst  SECURITY.md  TODO.md  USAGE.rst  VERSION  __init__.py  _gittag.py  args.txt  bashnametest  bqurl.html  builddocker.sh  buildstandalone  ceptest  cleandirs  condasetup  containerselftest.sh  conversion guide.xlsx  conversion_guide.xlsx  default.profraw  (+39 more)
.circleci/: artifact_path  config.yml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql-analysis.yml  docker-build-awsvariant.yml  docker-build-latest.yml  docker-build-on-release.yml  docker-build.yml  python-app.yml  python-publish.yml  showversion.yml
.run/: fullrunrapidtide_v1.run.xml  fullrunrapidtide_v2.run.xml  fullrunrapidtide_v3.run.xml  fullrunrapidtide_v4.run.xml  fullrunrapidtide_v5.run.xml  rapidtide_fortretro.run.xml  retroglm.run.xml
cloud/: download-nda-data  downloadcmd-auther  gmscalc-HCPYA  list-rapidtide-relevant-images  mount-and-run  rapidtide-HCPYA  rapidtide-cloud-test  simple-cp-test
console_scripts/: showxcorr.py
delaytools/: __init__.py  version.py
dockerbuild/: build.sh  containerops  inspect.sh  rapidtide_docker  test.sh  test_happy.sh
docs/: .api.rst.swp  Makefile  Manual.html  api.rst  api.rst.spicy  candidate_usage.md  codebase_reorg_plan_from_chat.md  conf.py  contributing.rst  exportlist.txt  index.rst  index_safe.rst  installation.rst  introduction.rst  legacy.rst  make.bat  poisonregressor.rst  practicalities.rst  programindex.rst  references.bib  requirements.txt  robustdelayestimation.rst  sg_execution_times.rst  support.rst  theoryofoperation.rst  usage.md  usage.rst  usage_adjustoffset.rst  usage_aligntcs.rst  usage_applydlfilter.rst  usage_atlasaverage.rst  usage_atlastool.rst  usage_calctexticc.rst  usage_ccorrica.rst  usage_diffrois.rst  usage_endtidalproc.rst  usage_fdica.rst  usage_filtnifti.rst  usage_filttc.rst  usage_general.rst  (+41 more)
docs/sphinxext/: github_link.py
examples/: README.txt  plot_showxcorrx.py  showxcorrx.py
examples/scripts/: biphasic  checksim  gensimbold  quick
examples/src/: corrlist.txt  gensimbold  lf_HbO  lf_HbR  lf_tHb  lt_HbR  lt_tHb  nirs.txt  rt_HbO  rt_tHb  sgsr_vs_dgsr  starttime.txt
hidden/: usage_showarbcorr.rst  usage_showstxcorr.rst  usage_spatialfit.rst  usage_testhrv.rst  usage_threeD.rst
rapidtide/: Colortables.py  DerivativeDelay.py  OrthoImageItem.py  RapidtideDataset.py  Refiner.py  RegressorRefiner.py  __init__.py  _gittag.py  _version.py  alignvoxels.py  calcandfitcorrpairs.py  calccoherence.py  calchybridsimfunc.py  calcnullsimfunc.py  calcsimfunc.py  colorops.py  converttemplates  correlate.py  correlation_fitter.py  corrfit.py  corrfitx.py  corrpass.py  corrpassx.py  decorators.py  dlfilter.py  dlfilter.py.old  dlfiltermin.py  dlfiltertorch.py  dlfiltertorch_broken.py  dlfiltertorch_works.py  externaltools.py  fMRIData_class.py  ffttools.py  filter.py  filter_funcs.py  findpatches.py  fit.py  genericmultiproc.py  glmpass.py  graderTemplate.py  (+52 more)
rapidtide.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rapidtide/candidatetests/: test_colortables.py  test_despeckle_multipeak.py  test_fitSimFuncMap.py  test_fullrunzcompare.py  test_happy_phase1.py  test_masking.py  test_mi.py  test_proberegressor.py  test_rapidtide2x_phase1.py  test_rapidtide2x_phase2.py  test_rapidtide2x_phase3.py  test_simroundtrip.py  test_spectrogram.py
rapidtide/core/: __init__.py
rapidtide/disabledtests/: xtest_happy_phase1.py  xtest_mi.py  xtest_proberegressor.py  xtest_rapidtide2x_phase1.py  xtest_rapidtide2x_phase2.py  xtest_rapidtide2x_phase3.py  xtest_spectrogram.py
rapidtide/experimental/: 008_cardfromfmri_25.0Hz.txt  008_normcardfromfmri_25.0Hz.txt  MotionHR.par  batchtrain  bigstack.par  blat.par  cardfiles  checkgpu  cnn.py  dataload.py  dispresults  dlfilter.py  dofiltering  dotraining  filterhcp  fmri.txt  gpucnn.sh  gru.py  harmonogram  hcpinputlist  hcpoutputlist  highresmotion  hoot.par  hoot.txt  hybrid.py  loss.npy  loss.txt  loss_val.npy  loss_valw128_l16_fn10_fl5_d0.3_e3_t4.0_relu_cnn.npy  loss_w128_l16_fn10_fl5_d0.3_e3_t4.0_relu_cnn.npy  lstm.py  main.py  model.json  model_w128_l16_fn10_fl5_d0.3_e3_t4.0_relu_cnn.h5  model_w128_l16_fn10_fl5_d0.3_e3_t4.0_relu_cnn_meta.json  model_w128_l16_fn10_fl5_d0.3_e5_cnn_meta.json  model_whole.h5  patchfilt.py  plaidtest  pleth.txt  (+10 more)
rapidtide/hiddentests/: test_fullrunrapidtide_v5.py
rapidtide/notreadyforprimetime/: DerivativeDelay.py  calcandfitcorrpairs.py  dlfilter_extratypes.py  dlfiltertorch_extratypes.py  fitSimFuncMap.py  parabfit.py  transformerdlfilter.py
rapidtide/scripts/: adjustoffset  adjustoffset.py  aligntcs  aligntcs.py  aparcaseg2dseg.py  applydlfilter  applydlfilter.py  applyppgproc.py  atlasaverage  atlasaverage.py  atlastool  atlastool.py  atlastool_safe  calcicc  calcicc.py  calctexticc  calctexticc.py  calcttest  calcttest.py  ccorrica  ccorrica.py  cloud-cp-test  delayvar.py  demeantcs  diffrois  diffrois.py  endtidalproc  endtidalproc.py  fdica  fdica.py  filtnifti  filtnifti.py  filttc  filttc.py  fingerprint  fingerprint.py  fixtr  fixtr.py  glmfilt  glmfilt.py  (+118 more)
rapidtide/tests/: .coveragerc  _mplsetup.py  bench_similarityfitter.py  cleanposttest  conftest.py  (+149 more)
runtimings/: m2mba
scripts/: rapidtide2  rapidtide2std  resamp1tc  showhist  showtc  showxcorr  test_correlate.py  tidepool
setupbackup/: pyproject.toml  setup.cfg  setup.py
setupmodernization/: pyproject.toml  setup.cfg  setup.py
setupmodernization/archived/: setup.py
tests/: .hide_test_simulate.py.swp  checksim  doresamp  hide_test_simulate.py  sgsr_vs_dgsr  test_correlate.py  test_fastresampler.py  test_filter.py  test_simulate.py
(+1120 files in other folders)
