[build-system]
requires = ['setuptools', 'wheel', 'versioneer[toml]']
build-backend = 'setuptools.build_meta'

[project]
name = 'rapidtide'
description = 'Tools for performing correlation analysis on fMRI data.'
authors = [
  { name='Blaise Frederick', email='blaise.frederick@gmail.com' },
]
readme = 'README.rst'
classifiers = [
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = '>=3.8'
dependencies = [
  'numpy',
  'scipy',
  'pandas',
  'scikit-image',
  'scikit-learn',
  'nibabel',
  'nilearn',
  'matplotlib',
  'pyfftw',
  'pyqtgraph',
  'pyqt5-sip',
  'requests',
  'statsmodels',
  'pywavelets',
  'tqdm',
]
dynamic = ['version', 'license', 'keywords']

[project.urls]
'Homepage' = 'https://github.com/bbfrederick/rapidtide'
'Bug Tracker' = 'https://github.com/bbfrederick/rapidtide/issues'
'Repository' = 'https://github.com/bbfrederick/rapidtide.git'
'Documentation' = 'https://rapidtide.readthedocs.io'
'Changelog' = 'https://github.com/bbfrederick/rapidtide/blob/main/CHANGELOG.md'

[project.optional-dependencies]
test = [
  'codecov',
  'coverage',
  'coveralls',
  'flake8-black',
  'pytest',
  'pytest-cov',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'sphinx-argparse',
  'sphinx-gallery',
  'm2r',
  'numpydoc',
  'recommonmark',
  'mistune',
]

#[project.scripts]
#rapidtide = 'rapidtide.scripts.rapidtide:entrypoint'
#tidepool = 'rapidtide.scripts.tidepool:entrypoint'
#calcicc = 'rapidtide.scripts.calcicc:main'

[tool.setuptools]
include-package-data = true 

[tool.setuptools.packages.find]
include = ['rapidtide', 'cloud']

[tool.setuptools.package-data]
rapidtide = ['rapidtide/*.py', 'rapidtide/workflows/*.py', 'rapidtide/scripts/*']

[tool.setuptools.dynamic]
version = {attr = "rapidtide.__version__"}

[tool.setuptools.exclude-package-data]
rapidtide = ['.eggs', '.git', '.github', '.pytest_cache', 'rapidtide/candidatetests', 'rapidtide/disabledtests', 'rapidtide/data/examples']

# Aliases
docs = ['rapidtide[doc]']
tests = ['rapidtide[test]']
all = ['rapidtide[docs,tests]']

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | rapidtide/_version.py
  | rapidtide/candidatetests
  | rapidtide/disabledtests
  | rapidtide/data/examples
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'rapidtide/_version.py'
versionfile_build = 'rapidtide/_version.py'
tag_prefix = 'v'
parentdir_prefix = 'rapidtide-'
