[build-system]
requires = ['setuptools>=42', 'cffi>=1.0.0', 'versioneer[toml]==0.29']
build-backend = "setuptools.build_meta"

[project]
name = 'rapidtide'
description = 'Tools for performing correlation analysis on fMRI data.'
keywords = ['fMRI', 'correlation', 'RIPTiDe', 'noise']
license = {text = 'Apache Software License'}
readme = 'README.rst'
classifiers = [
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.9'
dependencies = [
  'numpy',
  'scipy',
  'pandas',
  'pyarrow',
  'scikit-image',
  'scikit-learn',
  'nibabel',
  'nilearn',
  'matplotlib >= 3.3.0',
  'pyqtgraph >= 0.13.4',
  'pyqt6-sip',
  'pyqt6',
  'requests',
  'statsmodels',
  'pywavelets',
  'tensorflow >= 2.10.0',
  'tf-keras',
  'tqdm',
  'versioneer',
]
dynamic = ["version"]
authors = [
    {name = 'Blaise deB. Frederick', email='blaise.frederick@gmail.com'},
    {name = 'Taylor Salo'},
    {name = 'Daniel M. Drucker, Ph.D.'},
    {name = 'Jeffrey N Stout'},
    {name = 'Yaroslav O. Halchenko'},
    {name = 'Derek Monroe'},
]

[project.urls]
'Homepage' = 'https://github.com/bbfrederick/rapidtide'
'Bug Tracker' = 'https://github.com/bbfrederick/rapidtide/issues'
'Repository' = 'https://github.com/bbfrederick/rapidtide.git'
'Documentation' = 'https://rapidtide.readthedocs.io'
'Changelog' = 'https://github.com/bbfrederick/rapidtide/blob/main/CHANGELOG.md'

[project.optional-dependencies]
tests = [
  'codecov',
  'coverage',
  'coveralls',
  'flake8-black',
  'pytest',
  'pytest-cov',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'sphinx-argparse',
  'sphinx-gallery',
  'myst-parser',
  'numpydoc',
  'sphinxcontrib-bibtex',
  'tomlkit',
]

[project.scripts]
adjustoffset = 'rapidtide.scripts.adjustoffset:entrypoint'
aligntcs = 'rapidtide.scripts.aligntcs:entrypoint'
applydlfilter = 'rapidtide.scripts.applydlfilter:entrypoint'
atlasaverage = 'rapidtide.scripts.atlasaverage:entrypoint'
atlastool = 'rapidtide.scripts.atlastool:entrypoint'
calcicc = 'rapidtide.scripts.calcicc:entrypoint'
calctexticc = 'rapidtide.scripts.calctexticc:entrypoint'
calcttest = 'rapidtide.scripts.calcttest:entrypoint'
ccorrica = 'rapidtide.scripts.ccorrica:entrypoint'
delayvar = 'rapidtide.scripts.delayvar:entrypoint'
diffrois = 'rapidtide.scripts.diffrois:entrypoint'
endtidalproc = 'rapidtide.scripts.endtidalproc:entrypoint'
fdica = 'rapidtide.scripts.fdica:entrypoint'
filtnifti = 'rapidtide.scripts.filtnifti:entrypoint'
filttc = 'rapidtide.scripts.filttc:entrypoint'
fingerprint = 'rapidtide.scripts.fingerprint:entrypoint'
fixtr = 'rapidtide.scripts.fixtr:entrypoint'
gmscalc = 'rapidtide.scripts.gmscalc:entrypoint'
happy = 'rapidtide.scripts.happy:entrypoint'
happy2std = 'rapidtide.scripts.happy2std:entrypoint'
happywarp = 'rapidtide.scripts.happywarp:entrypoint'
histnifti = 'rapidtide.scripts.histnifti:entrypoint'
histtc = 'rapidtide.scripts.histtc:entrypoint'
linfitfilt = 'rapidtide.scripts.linfitfilt:entrypoint'
localflow = 'rapidtide.scripts.localflow:entrypoint'
mergequality = 'rapidtide.scripts.mergequality:entrypoint'
pairproc = 'rapidtide.scripts.pairproc:entrypoint'
pairwisemergenifti = 'rapidtide.scripts.pairwisemergenifti:entrypoint'
physiofreq = 'rapidtide.scripts.physiofreq:entrypoint'
pixelcomp = 'rapidtide.scripts.pixelcomp:entrypoint'
plethquality = 'rapidtide.scripts.plethquality:entrypoint'
polyfitim = 'rapidtide.scripts.polyfitim:entrypoint'
proj2flow = 'rapidtide.scripts.proj2flow:entrypoint'
rankimage = 'rapidtide.scripts.rankimage:entrypoint'
rapidtide = 'rapidtide.scripts.rapidtide:entrypoint'
rapidtide2std = 'rapidtide.scripts.rapidtide2std:entrypoint'
resamplenifti = 'rapidtide.scripts.resamplenifti:entrypoint'
resampletc = 'rapidtide.scripts.resampletc:entrypoint'
retroregress = 'rapidtide.scripts.retroregress:entrypoint'
retrolagtcs = 'rapidtide.scripts.retrolagtcs:entrypoint'
roisummarize = 'rapidtide.scripts.roisummarize:entrypoint'
runqualitycheck = 'rapidtide.scripts.runqualitycheck:entrypoint'
showarbcorr = 'rapidtide.scripts.showarbcorr:entrypoint'
showhist = 'rapidtide.scripts.showhist:entrypoint'
showstxcorr = 'rapidtide.scripts.showstxcorr:entrypoint'
showtc = 'rapidtide.scripts.showtc:entrypoint'
showxcorr_legacy = 'rapidtide.scripts.showxcorr_legacy:main'
showxcorrx = 'rapidtide.scripts.showxcorrx:entrypoint'
showxy = 'rapidtide.scripts.showxy:entrypoint'
simdata = 'rapidtide.scripts.simdata:entrypoint'
spatialdecomp = 'rapidtide.scripts.spatialdecomp:entrypoint'
spatialfit = 'rapidtide.scripts.spatialfit:entrypoint'
spatialmi = 'rapidtide.scripts.spatialmi:entrypoint'
spectrogram = 'rapidtide.scripts.spectrogram:entrypoint'
stupidramtricks = 'rapidtide.scripts.stupidramtricks:entrypoint'
synthASL = 'rapidtide.scripts.synthASL:entrypoint'
tcfrom2col = 'rapidtide.scripts.tcfrom2col:entrypoint'
tcfrom3col = 'rapidtide.scripts.tcfrom3col:entrypoint'
temporaldecomp = 'rapidtide.scripts.temporaldecomp:entrypoint'
testhrv = 'rapidtide.scripts.testhrv:main'
threeD = 'rapidtide.scripts.threeD:entrypoint'
tidepool = 'rapidtide.scripts.tidepool:entrypoint'
variabilityizer = 'rapidtide.scripts.variabilityizer:entrypoint'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['rapidtide', 'cloud']

[tool.setuptools.package-data]
rapidtide = ['rapidtide/*.py', 'rapidtide/workflows/*.py', 'rapidtide/scripts/*']

[tool.setuptools.dynamic]
version = {attr = 'rapidtide.__version__'}

[tool.setuptools.exclude-package-data]
rapidtide = ['.eggs', '.git', '.github', '.pytest_cache', 'rapidtide/candidatetests', 'rapidtide/disabledtests', 'rapidtide/data/examples']

# Aliases
docs = ['rapidtide[doc]']
tests = ['rapidtide[test]']
all = ['rapidtide[docs,tests]']

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | rapidtide/_version.py
  | rapidtide/candidatetests
  | rapidtide/disabledtests
  | rapidtide/data/examples
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'rapidtide/_version.py'
versionfile_build = 'rapidtide/_version.py'
tag_prefix = 'v'
parentdir_prefix = 'rapidtide-'

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,versioneer.py,*.css,exportlist.txt,data,*.bib'
check-hidden = true
ignore-regex = '\bsubjeT\b'
ignore-words-list = 'TE,thex,normall'
