[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
description_file = README.md
name = rapidtide
author = "Blaise Frederick"
author_email = "bbfrederick@mclean.harvard.edu"


[versioneer]
VCS = git
style = pep440
versionfile_source = rapidtide/_version.py
versionfile_build = rapidtide/_version.py
tag_prefix = v
parentdir_prefix =

[flake8]
max-line-length = 88
exclude =
    *build/
    dist/
    _version.py
    rapidtide/disabledtests/
    rapidtide/candidatetests/
    rapidtide/data/examples/extrasrc/
    rapidtide/data/examples/dst/
putty-ignore =
    */__init__.py : +F401
extend-ignore =
     E203
     E402
#ignore =
#    E203
#    E402
#    E501
#    E722
#    W503
