[metadata]
description_file = README.rst
name = rapidtide
description = Tools for performing time delay analysis on fMRI data
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/bbfrederick/rapidtide
author = Blaise Frederick
author_email = BBFrederick@mclean.harvard.edu,
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls = 
    Documentation = https://rapidtide.readthedocs.io
    Source = https://github.com/bbfrederick/rapidtide
    Tracker = https://github.com/bbfrederick/rapidtide/issues

[options]
install_requires =
    numpy
    scipy
    pandas
    pyarrow
    scikit-image
    scikit-learn
    nibabel
    nilearn
    matplotlib>=3.3.0
    pyfftw
    pyqtgraph>=0.13.4
    statsmodels
    numba
    tomlkit
    tensorflow>=2.10.0
    tf-keras
    tqdm
py_modules = 
    rapidtide/miscmath
    rapidtide/correlate
    rapidtide/filter
    rapidtide/io
    rapidtide/resample
    rapidtide/stats
    rapidtide/util
    rapidtide/multiproc
    rapidtide/calcnullsimfunc
    rapidtide/calcsimfunc
    rapidtide/calccoherence
    rapidtide/simfuncfit
    rapidtide/patchmatch
    rapidtide/peakeval
    rapidtide/helper_classes
    rapidtide/glmpass
    rapidtide/dlfilter
    rapidtide/wiener
    rapidtide/refine
    rapidtide/refinedelay
    rapidtide/refineregressor
    rapidtide/_version
    rapidtide/workflows/parser_funcs
    rapidtide/workflows/aligntcs
    rapidtide/workflows/happy_parser
    rapidtide/workflows/niftidecomp
    rapidtide/workflows/rapidtide_parser
    rapidtide/workflows/rapidtide2x_parser
    rapidtide/workflows/showtc
    rapidtide/workflows/roisummarize
    rapidtide/tidepoolTemplate
    rapidtide/tidepoolTemplate_alt
    rapidtide/tidepoolTemplate_qt6
    rapidtide/tidepoolTemplate_alt_qt6
    rapidtide/OrthoImageItem
package_data =
    reference/JHU-ArterialTerritoriesNoVent-LVL*regions.txt
    reference/JHU-ArterialTerritoriesNoVent-LVL*2mm.nii.gz
    reference/ASPECTS*
    reference/ATT*
    reference/HCP1200*
    reference/MNI152*
    tests/testdata/*.txt
    tests/tmp/.placeholder.txt
scripts = 
    rapidtide/scripts/aligntcs
    rapidtide/scripts/applydlfilter
    rapidtide/scripts/atlasaverage
    rapidtide/scripts/atlastool
    rapidtide/scripts/calcicc
    rapidtide/scripts/calctexticc
    rapidtide/scripts/ccorrica
    rapidtide/scripts/endtidalproc
    rapidtide/scripts/filtnifti
    rapidtide/scripts/filttc
    rapidtide/scripts/fingerprint
    rapidtide/scripts/glmfilt
    rapidtide/scripts/happy
    rapidtide/scripts/happy2std
    rapidtide/scripts/happy_legacy
    rapidtide/scripts/happywarp
    rapidtide/scripts/histnifti
    rapidtide/scripts/histtc
    rapidtide/scripts/pairwisemergenifti
    rapidtide/scripts/pairproc
    rapidtide/scripts/physiofreq
    rapidtide/scripts/pixelcomp
    rapidtide/scripts/plethquality
    rapidtide/scripts/polyfitim
    rapidtide/scripts/rapidtide
    rapidtide/scripts/rapidtide2std
    rapidtide/scripts/rapidtide2x_legacy
    rapidtide/scripts/resamp1tc
    rapidtide/scripts/resamplenifti
    rapidtide/scripts/roisummarize
    rapidtide/scripts/showarbcorr
    rapidtide/scripts/showhist
    rapidtide/scripts/showtc
    rapidtide/scripts/showstxcorr
    rapidtide/scripts/showxcorr_legacy
    rapidtide/scripts/showxcorrx
    rapidtide/scripts/showxy
    rapidtide/scripts/simdata
    rapidtide/scripts/spatialdecomp
    rapidtide/scripts/spatialfit
    rapidtide/scripts/spatialmi
    rapidtide/scripts/spectrogram
    rapidtide/scripts/synthASL
    rapidtide/scripts/tcfrom3col
    rapidtide/scripts/temporaldecomp
    rapidtide/scripts/threeD
    rapidtide/scripts/variabilityizer
    rapidtide/scripts/tidepool


#[versioneer]
#VCS = git
#style = pep440
#versionfile_source = rapidtide/_version.py
#versionfile_build = rapidtide/_version.py
#tag_prefix =

[flake8]
max-line-length = 99
exclude =
    *build/
    _version.py
    rapidtide/disabledtests/
    rapidtide/candidatetests/
putty-ignore =
    */__init__.py : +F401
ignore =
    E203
    E402
    E501
    E722
    W503
