[build-system]
requires = [
    "setuptools==40.8",
     "wheel",
     "setuptools_scm>=6.2"
    ]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "rapidtide/_version.py"


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | rapidtide/_version.py
)
'''
