[metadata]
description-file = README.rst
name = rapidtide
description = Tools for performing time delay analysis on fMRI data
long_description = file: README.rst
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bbfrederick/rapidtide
author = Blaise Frederick
author_email = BBFrederick@mclean.harvard.edu,
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls = 
    Documentation = https://rapidtide.readthedocs.io
    Source = https://github.com/bbfrederick/rapidtide
    Tracker = https://github.com/bbfrederick/rapidtide/issues

[options]
install_requires =
    numpy>=1.16
    scipy
    pandas
    scikit-image
    scikit-learn
    nibabel
    nilearn
    matplotlib
    pyfftw
    pyqtgraph>=0.11.0
    statsmodels
    numba
    keras
    tensorflow>=2.4.0

#[versioneer]
#VCS = git
#style = pep440
#versionfile_source = rapidtide/_version.py
#versionfile_build = rapidtide/_version.py
#tag_prefix =

[flake8]
max-line-length = 99
exclude =
    *build/
    _version.py
    rapidtide/disabledtests/
    rapidtide/candidatetests/
putty-ignore =
    */__init__.py : +F401
ignore =
    E203
    E402
    E501
    E722
    W503
